--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "pyronounce"
 version = "0.1.0"
-description = "A package to guess how pronounceable words are"
+description = "Package to assess the pronounceability of English words and text."
 readme = "README.md"
 requires-python = ">=3.7"
 license = {text = "MIT"}
