Update version to 0.1.2 in pyproject.toml, add nltk dependency, enhance README with example, and improve CMU dictionary loading in utils.py with caching. Modify model.py for better word classification and expand phonetic analysis in utils.py.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ wheels/
 
 # Virtual environments
 .venv
+
+# Generated data files
+pyronounce/data/cmu_dict_cache.json
+pyronounce/data/pronunciation_dict.json
