--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pyronounce"
-version = "0.1.0"
+version = "0.1.2"
 description = "Package to assess the pronounceability of English words and text."
 readme = "README.md"
 requires-python = ">=3.7"
@@ -20,6 +20,9 @@ dev = [
     "pytest",
     "black",
     "isort",
+]
+nltk = [
+    "nltk>=3.8.0",
 ]
 
 [project.scripts]
